Camera working in app - extra layout files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
 
         ]]>
     </string>
+    <string name="segment_progress"></string>
+    <string name="upload_progress"></string>
 </resources>
